--- a/contact/index.html
+++ b/contact/index.html
@@ -48,7 +48,7 @@
     <!-- Reveal on scroll -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     
-    <!-- Trustpilot -->
+    <!-- Trust -->
 
 </head>
 
@@ -81,9 +81,6 @@
 
                 <center><a href="/"><p class="return-home-button">⬅️ Return To Home</p></a></center>
                 <!-- TrustBox widget - Micro Review Count -->
-                <div class="trustpilot-widget" data-locale="en-US" data-template-id="5419b6a8b0d04a076446a9ad" data-businessunit-id="639a9c1fa1af872eeeaaa17e" data-style-height="24px" data-style-width="100%" data-theme="dark" data-min-review-count="10" data-style-alignment="center">
-                  <center><a href="https://www.trustpilot.com/review/TBonecodes.xyz" target="_blank" rel="noopener">Trustpilot</a></center>
-                </div>
                 <!-- End TrustBox widget -->
             </div>
         </div>
