added period to sentence inside of work.html

--- a/work/index.html
+++ b/work/index.html
@@ -73,7 +73,7 @@
             <a href="https://discord.gg/chimppanini">
                 <div class="on-hover-40 hide-text-block work-block">
                     <h2 class="text-color-white">Chimpanzee Panini</h2>
-                    <p class="size-small text-color-red">A Gorilla Tag inspired game where I 3D model and develop scripts in C#</p>
+                    <p class="size-small text-color-red">A Gorilla Tag inspired game where I 3D model and develop scripts in C#.</p>
                 </div>
             </a>
             <a href="/"><p class="return-home-button">⬅️ Return To Home</p></a>
