--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     
 </head>
 
-<body class="website-background-grey">
+<body class="website-background-gray">
 
     <div class="hide-mobile mobile-tap-area">
         <div class="max-width">
